test/bad/illtyping18.fjrec
type bool
data constructor True : {} -> bool
data constructor False : {} -> bool

type int
data constructor Zero : {} -> int
data constructor Succ : { int } -> int

program
  join rec is_even (n : int) : bool =
    match n return bool with
    | Zero {} -> True {}
    | Succ { m } -> jump is_odd { m } : bool
    end
  and is_odd (n : int) : int =
    match n return int with
    | Zero {} -> Zero {}
    | Succ { m } -> Zero {}
    end
  in
  jump is_even { Succ { Succ { Zero {} } } } : bool
